--- a/src/app/components/pages/clients/clients.component.html
+++ b/src/app/components/pages/clients/clients.component.html
@@ -1,14 +1,14 @@
-<div class="tech-slideshow">
+<!-- <div class="tech-slideshow">
   <div class="mover-1">
     <div class="img">
-      <abbr title="OOREDOO"><img src="../../../../assets/img/clients/OOREDOO-IbComProd.png" alt=""></abbr>
-      <abbr title="Université Centrale"><img src="../../../../assets/img/clients/UC-IbComProd.png" alt=""></abbr>
-      <abbr title="Magasin Général"><img src="../../../../assets/img/clients/MG-IbComProd.png" alt=""></abbr>
-      <abbr title="Arab Tunisian Bank"><img src="../../../../assets/img/clients/ATB-IbComProd.png" alt=""></abbr>
-      <abbr title="Nouvelair"><img src="../../../../assets/img/clients/NA-IbComProd.png" alt=""></abbr>
-      <abbr title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt=""></abbr>
-      <abbr title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt=""></abbr>
-      <abbr title="Peugeot"><img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="OOREDOO"><img src="../../../../assets/img/clients/OOREDOO-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="Université Centrale"><img src="../../../../assets/img/clients/UC-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="Magasin Général"><img src="../../../../assets/img/clients/MG-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="Arab Tunisian Bank"><img src="../../../../assets/img/clients/ATB-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="Nouvelair"><img src="../../../../assets/img/clients/NA-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt=""></abbr>
+      <abbr class='client' title="Peugeot"><img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt=""></abbr>
       <button href="/nos-clients"> Voir Plus</button>
   </div>
   <div class="mover-2">
@@ -25,4 +25,38 @@
     <img src="../../../../assets/img/clients/ATB-IbComProd.png" alt="">
     <img src="../../../../assets/img/clients/NA-IbComProd.png" alt="">
   </div>
-</div>
+</div> -->
+
+
+<!-- <h3>Plus de 400 clients, Grands comptes, ETI, PME et Start-up nous font confiance:</h3>
+
+<div class="slides">
+  <abbr class='client' title="OOREDOO"><img src="../../../../assets/img/clients/OOREDOO-IbComProd.png" alt="OOREDOO"></abbr>
+  <abbr class='client' title="Université Centrale"><img src="../../../../assets/img/clients/UC-IbComProd.png" alt="Université Centrale"></abbr>
+  <abbr class='client' class='client' title="Magasin Général"><img src="../../../../assets/img/clients/MG-IbComProd.png" alt="Magasin Général"></abbr>
+  <abbr class='client' title="Arab Tunisian Bank"><img src="../../../../assets/img/clients/ATB-IbComProd.png" alt="Arab Tunisian Bank"></abbr>
+  <abbr class='client' title="Nouvelair"><img src="../../../../assets/img/clients/NA-IbComProd.png" alt="Nouvelair"></abbr>
+  <abbr class='client' title="Qatar National Bank"><img src="../../../../assets/img/clients/QNB-IbComProd.png" alt="Qatar National Bank"></abbr>
+  <abbr class='client' title="TotalEnergies "><img src="../../../../assets/img/clients/TE-IbComProd.png" alt="TotalEnergies"></abbr>
+  <abbr class='client' title="Peugeot"><img src="../../../../assets/img/clients/PEUGEOT-IbComProd.png" alt="Peugeot"></abbr>
+</div> -->
+
+
+<ul id="c"> 
+		
+  <li><p><strong>1</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>2</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>3</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>4</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+
+  <li><p><strong>5</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>6</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>7</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>8</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li> 
+
+  <li><p><strong>9</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>10</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>11</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+  <li><p><strong>12</strong></p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li> 
+
+</ul>
