--- a/src/app/components/pages/contact-page/contact-page.component.scss
+++ b/src/app/components/pages/contact-page/contact-page.component.scss
@@ -4,13 +4,24 @@
     z-index: 1;
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/contact.jpg);
+   // background-image: url(../../../../assets/img/bg/contact.jpg);
     background-size: 100% 100%;
     height: 520px;
     width: 1348px;
-
+    background-color: rgb(17, 16, 16);
     .page-title-content{
         margin-top: 30%;
+    }
+    h2 { 
+        margin-top: -5%;
+        margin-bottom: 2%;
+        margin-left: auto;
+        margin-right: auto;
+        
+        font: {
+            size: 29px;
+            weight: 700;
+        };
     }
 }
 .contact-info-area {
@@ -81,7 +92,7 @@
     }
 }
 .contact-form {
-    background-color: var(--whiteColor);
+    background-color: rgb(17, 16, 16);
     box-shadow: 0px 8px 16px 0px rgba(146, 184, 255, 0.2);
     border-radius: 5px;
     padding: 50px;
@@ -116,27 +127,30 @@
         }
     }
     .default-btn {
-        background-color: black;
+        background-color: white;
         border-radius: 30px;
         margin-top: 10px;
-        border-color: black;
+        border-color: white;
         box-shadow: 0 5px 28.5px 1.5px rgba(0, 0, 0, 0.2);
         button{
-            color: white;
+            color: rgb(0, 0, 0);
             font-weight: 700;
             font-size: 16.5px;
+        }
+        i{
+            color: #000000;
         }
 
         &:hover, &:focus {
             box-shadow: 0 5px 28.5px 1.5px rgba(14, 181, 130, 0.2);
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(0, 0, 0);
 
             button{
-                color: black;
+                color: rgb(255, 255, 255);
             }
 
             i{
-                color: black;
+                color: rgb(255, 255, 255);
             }
         }
     }
