--- a/src/app/components/pages/home-page-one/home-page-one.component.scss
+++ b/src/app/components/pages/home-page-one/home-page-one.component.scss
@@ -226,9 +226,9 @@ button {
 @supports (display: grid) {
   body {
     display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 0.625rem;
-  grid-template-areas: ". main main ." ". main main .";
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 0.625rem;
+    grid-template-areas: ". main main ." ". main main .";
   }
 }
 
@@ -257,8 +257,131 @@ button {
       
   }
 }
-    
-@media only screen and (max-width: 412px){
+
+.mobileMenu{
+  display: none;
+}
+
+@media only screen and  (max-width: 375px){
+    .mobileMenu{
+      margin-left: -100px;
+      display: block;
+      $lred:#E57373;
+      $red:#F44336;
+
+    @mixin transition($in) {
+      transition:$in;
+      -webkit-transition:$in;
+      -moz-transition:$in;
+      -o-transition:$in;
+      -ms-transition:$in;
+    }
+
+    body {
+      margin:0;
+      padding:0;
+      background-color:#222;
+    }
+
+    * {
+      font-family:Helvetica,sans-serif;
+      color:#555;
+    }
+
+    #mmeennuu {
+      display:none;
+    }
+
+    #mmeennuu:checked ~ .menu {
+
+      width:100%;
+      border-radius:5px;
+      background-color:transparent;
+      border:3px solid $red;
+      height:auto;
+
+      &>ul {
+        display:block;
+        opacity:1;
+      }
+      &>.barry {
+        display:none;
+      }
+    }
+
+    .menu {
+      display:block;
+      margin:30px auto;
+      width:100px;
+      height:100px;
+      background-color:$red;
+      border:3px solid transparent;
+      border-radius:50%;
+      overflow:hidden;
+      cursor:pointer;
+      @include transition(all 0.5s ease-in-out);
+
+      div.barry {
+        width:40px;
+        margin:35px auto;
+
+
+        .bar {
+          display:block;
+          width:100%;
+          height:5px;
+          margin-top:3px;
+          border-radius:2px;
+          background-color:#fff;
+        }
+      }
+
+      ul {
+        opacity:0;
+        display:none;
+        @include transition(all 0.5s ease-in-out);
+        list-style-type:none;
+        padding:0;
+        width:500px;
+        text-align:center;
+        margin-bottom: 0;
+
+        li {
+          display:inline-block;
+          a {
+            text-decoration:none;
+            display:inline-block;
+            padding:15px 25px;
+            color:$red;
+            font-size:10px;
+            @include transition(all 0.3s ease-in-out);
+            border:3px solid transparent;
+            border-radius:5px;
+
+            &:hover {
+              border-color:$red;
+            }
+            
+            &:target {
+              border-bottom-color:$red;
+            }
+          }
+        }
+      }
+    }
+    }
+    .about{
+        margin-top: 80px;
+    }
+}
+
+
+
+
+@media only screen and (min-width: 376px) and (max-width: 414px){
+  .about{
+    margin-top: 80px;
+  }
   .head{
     display: block;
   }
@@ -281,7 +404,7 @@ button {
     margin-top: -17%;
     font-weight: bold;
   }
-}
+} 
 
 @media  only screen and (min-width: 413px) and (max-width: 912px){
   .head{
