--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.scss
@@ -101,6 +101,18 @@
    // position: right;
     margin-top: -13.5%;
     margin-left: 2.8%;
+    #background-video {
+        height: 100vh;
+        width: 100vw;
+        object-fit: cover;
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: -1;
+        }
+    
 }
 .container{
     display: inline;
@@ -108,7 +120,9 @@
 .row{
    width: 97%;
    margin-top: 8%;
+   
 }
+
 
 // .bg{
 //     margin-top: 100px;
@@ -120,8 +134,10 @@
 // }
 
 .bg{
+    
     margin-top: 0px;
    // background-image: url("../../../../../assets/img/bg/webDesign.jpg");
+    
     background-size:  100% 647.5px;
     width: 100%;
     height: 647.5px;
