--- a/src/app/components/pages/nos-clients/nos-clients.component.scss
+++ b/src/app/components/pages/nos-clients/nos-clients.component.scss
@@ -94,21 +94,40 @@
     }
 }
 .page-title-area{
-    background-image: url(../../../../assets/img/bg/clients.jpg);
+   // background-image: url(../../../../assets/img/bg/clients.jpg);
     background-size: 100% 100%;
     height: 520px;
     width: 100%;
-
+    background-color: rgb(17, 16, 16);;
     .page-title-content{
         margin-top: 30%;
     }
+
+    h2{
+      color: #f1f2f6;
+      margin-top: 50px;
+      font-weight: 700;
+     // font-size: 50px;
+     text-align: center;
+  }
+  p{
+      font-size: 30px;
+      margin-top: 5%;
+      //margin-left: 95px;
+      text-align: center;
+      color: rgb(221, 217, 217);
+  }
 }
 .titre{
-  margin-top: 2%;
+  h3{
+    color: #fff;
+  }
+  margin-top: 220px;
+  margin-bottom: 200px;
   margin-left: 30px;
 }
 .gallery-area{
-    margin-top: -38.5%;
+    margin-top: -400px;
 }
 .galeryBtn{
     button{
