--- a/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
+++ b/src/app/components/pages/relations-presse-et-publiques/relations-presse-et-publiques.component.html
@@ -1,6 +1,10 @@
 <app-header-style></app-header-style>
 <div style="background-color: rgb(17, 16, 16);">
-
+    <video id="background-video" width="100%" height="648px" autoplay loop>
+        <source src="../../../../../assets/video/first.mp4" type="video/mp4">
+        
+      Your browser does not support the video tag.
+    </video>
     <div class="page-title-area" data-jarallax='{"speed": 0.3}'>
         <div class="container" id="scroll">
             <!-- <div class="page-title-content">
@@ -28,7 +32,6 @@
         <span class="button-text"> voir Galerie</span>
         </button>
     </div>
-
     <section class="courses-details-area pt-100 pb-70">
         <div class="container">
             <div class="courses-details-header">
