--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
@@ -1,8 +1,5 @@
 <div class="bg">
-    <video id="background-video" width="100%" height="648px" autoplay loop>
-        <source src="../../../../../assets/video/first.mp4" type="video/mp4">            
-        Your browser does not support the video tag.
-    </video>
+    
     <div class="head">
         <!-- logo -->
         <div class="logo">
@@ -81,12 +78,15 @@
             </div>
         </div>
     </div>
-
     <div class="gallery-area pt-100 pb-20" >
-        
+
         <div class="container">
             <div class="row">
-               
+                <!-- <video width="100%" height="648px" autoplay loop>
+                    <source src="../../../../../assets/video/first.mp4" type="video/mp4">
+                    
+                  Your browser does not support the video tag.
+                  </video> -->
                 <div class="col-lg-3 col-md-2 col-sm-6">
                         <div class="single-gallery-item mb-10">
                             <div class="video" *ngIf="isVideoWeb">
