--- a/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
+++ b/src/app/components/pages/home-page-one/homeone-main-banner/homeone-main-banner.component.html
@@ -1,87 +1,88 @@
 <div class="bg">
     
-    <div class="head">
-        <!-- logo -->
-        <div class="logo">
-            <img src="../../../../../assets/img/blancIbcom.png" alt="IBComProd Logo">
-        </div>
-        <!-- menu -->
-        <div class="menu">
-            <!-- <ul>
-
-                <tr routerLink="/">Acceuil</tr>
-                <tr>
-                    <div class="btn-group">
-                        <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                            Nos Services
-                            <span class="visually-hidden">Toggle Dropdown</span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" routerLink="/relations-presse-et-publiques">Relations Presse et Publiques</a></li>
-                            <li><a class="dropdown-item" routerLink="/production-audiovisuelle">Production Audiovisuelle</a></li>
-                            <li><a class="dropdown-item" routerLink="/marketing-digital">Marketing Digital</a></li>
-                            <li><a class="dropdown-item" routerLink="/événementiel">ÉVÉNEMENTIEL</a></li>
-                            <li><a class="dropdown-item" routerLink="/développement-web">Développement Web</a></li>
-                            <li><a class="dropdown-item" routerLink="/design-graphique">Design Graphique</a></li>
-                        </ul>
+   
+    <div class="gallery-area pt-100 pb-20" >
+        <div class="head">
+            <!-- logo -->
+            <div class="logo">
+                <img src="../../../../../assets/img/blancIbcom.png" alt="IBComProd Logo">
+            </div>
+            <!-- menu -->
+            <div class="menu">
+                <!-- <ul>
+    
+                    <tr routerLink="/">Acceuil</tr>
+                    <tr>
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                Nos Services
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" routerLink="/relations-presse-et-publiques">Relations Presse et Publiques</a></li>
+                                <li><a class="dropdown-item" routerLink="/production-audiovisuelle">Production Audiovisuelle</a></li>
+                                <li><a class="dropdown-item" routerLink="/marketing-digital">Marketing Digital</a></li>
+                                <li><a class="dropdown-item" routerLink="/événementiel">ÉVÉNEMENTIEL</a></li>
+                                <li><a class="dropdown-item" routerLink="/développement-web">Développement Web</a></li>
+                                <li><a class="dropdown-item" routerLink="/design-graphique">Design Graphique</a></li>
+                            </ul>
+                        </div>
+                    </tr>
+                    <tr routerLink="/nos-clients">Nos Clients</tr>
+                    <tr routerLink="/blog-style-2">Blog</tr>
+                    <tr routerLink="/contact">Contact</tr>
+                </ul>-->
+                <nav class="navbar navbar-expand-sm">
+                    <div class="container-fluid">
+                        <div class="collapse navbar-collapse" >
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" routerLink="/">Acceuil</a>
+                                </li>
+                                <div class="btn-group">
+                                    <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Nos Services
+                                        <span class="visually-hidden">Toggle Dropdown</span>
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/relations-presse-et-publiques">Relations Presse et Publiques</a></li>
+                                        <li><a class="dropdown-item" href="/production-audiovisuelle">Production Audiovisuelle</a></li>
+                                        <li><a class="dropdown-item" href="/marketing-digital">Marketing Digital</a></li>
+                                        <li><a class="dropdown-item" href="/événementiel">ÉVÉNEMENTIEL</a></li>
+                                        <li><a class="dropdown-item" href="/développement-web">Développement Web</a></li>
+                                        <li><a class="dropdown-item" href="/design-graphique">Design Graphique</a></li>
+                                    </ul>
+                                </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/nos-clients">Nos Clients</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/blog-style-2">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/contact">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </tr>
-                <tr routerLink="/nos-clients">Nos Clients</tr>
-                <tr routerLink="/blog-style-2">Blog</tr>
-                <tr routerLink="/contact">Contact</tr>
-            </ul>-->
-            <nav class="navbar navbar-expand-sm">
-                <div class="container-fluid">
-                    <div class="collapse navbar-collapse" >
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" routerLink="/">Acceuil</a>
-                            </li>
-                            <div class="btn-group">
-                                <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Nos Services
-                                    <span class="visually-hidden">Toggle Dropdown</span>
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/relations-presse-et-publiques">Relations Presse et Publiques</a></li>
-                                    <li><a class="dropdown-item" href="/production-audiovisuelle">Production Audiovisuelle</a></li>
-                                    <li><a class="dropdown-item" href="/marketing-digital">Marketing Digital</a></li>
-                                    <li><a class="dropdown-item" href="/événementiel">ÉVÉNEMENTIEL</a></li>
-                                    <li><a class="dropdown-item" href="/développement-web">Développement Web</a></li>
-                                    <li><a class="dropdown-item" href="/design-graphique">Design Graphique</a></li>
-                                </ul>
-                            </div>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/nos-clients">Nos Clients</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/blog-style-2">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+                </nav>
+            </div>
+            <!-- register -->
+            <div class="btn-container">
+                <div class="dropdown" id="register">
+                <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class='bx bx-user'></i>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" routerLink="/login">Se connecter</a></li>
+                    <li><a class="dropdown-item" routerLink="/candidat">S'inscrire</a></li>
+                </ul>
                 </div>
-            </nav>
-        </div>
-        <!-- register -->
-        <div class="btn-container">
-            <div class="dropdown" id="register">
-            <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class='bx bx-user'></i>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" routerLink="/login">Se connecter</a></li>
-                <li><a class="dropdown-item" routerLink="/candidat">S'inscrire</a></li>
-            </ul>
             </div>
         </div>
-    </div>
-    <div class="gallery-area pt-100 pb-20" >
         <div id="video-background">
             <div class="video-foreground">
-                <iframe src="https://www.youtube.com/embed/sc8T7k6MQ8U?autoplay=1&controls=0&loop=1" title="YouTube video player" frameborder="0" allowfullscreen ></iframe>
+                <iframe src="https://www.youtube.com/embed/sc8T7k6MQ8U?autoplay=1&controls=0&playlist=sc8T7k6MQ8U&loop=1" title="YouTube video player" frameborder="0" allowfullscreen ></iframe>
             </div>
         </div>
         
